components/py3ocp7ai-svc/base/rag-route-rag.yaml
# Source: rag/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rag
  labels:
    app.kubernetes.io/name: rag
    app.kubernetes.io/instance: rag
    app.kubernetes.io/version: "0.2.14"
    app.kubernetes.io/managed-by: kustomize
spec:
  to:
    kind: Service
    name: rag
    weight: 100
  port:
    targetPort: 8501
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  alternateBackends: []
